# andriy-website

./: .gitignore  Cargo.toml  NOTES.md  README.md  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  snowpack.config.js  tailwind.config.js  vite.config.ts
archive/: package.json
archive/src/components/product/: ProductCard.ts  (+1 more)
archive/src/pages/: ProductDetails.ts  Products.ts
archive/src/types/: Cart.ts
archive/src/utils/: Cart.ts
products/: cake-topper-1.md  ornament-1.md
public/: cart.ts  index.html  manifest.json
public/styles/: styles.scss
src/: App.ts  app.rs  app.ts  cart.rs  index.html  index.ts  lib.rs  main.rs  product.rs  routes.rs
src/components/: Cart.tsx  CartItem.tsx  CartSummary.tsx  Layout.tsx  ProductItem.tsx  layout.tsx  my-element.ts
src/components/buttons/: AddToCart.ts
src/components/cart/: Cart.ts  CartIcon.ts  CartItem.ts  CartItemList.ts
src/components/common/: Footer.ts  Header.ts
src/components/product/: ProductCard.ts  ProductDetails.ts  ProductsList.ts
src/contexts/: CartContext.tsx
src/lib/: products.ts
src/mock/: Products.ts
src/pages/: 404.tsx  Cart.ts  Home.ts  ProductDetails.ts  Products.ts  _app.tsx  admin.tsx  cart.tsx  index.ts  index.tsx
src/pages/products/: [id].tsx  first-product.tsx  index.tsx
src/router/: index.ts  routes.ts
src/styles/: globals.scss  styles.scss  utils.module.scss
src/types/: Cart.ts  product.ts
src/utils/: LocalStorage.ts
static/: output.css
style/: main.scss
templates/: cart.html  header.html  home.html  layout.html
(+4 files in other folders)
